0.2.2
-----
1. Adjust layout of settings page.

0.2.1
-----
1. Fix piCorePlayer settings pages being opened in external browser.
2. Don't explicitly disable scrollbars.
3. Fix showing of PDFs.

0.2.0
-----
1. Add debug command line arg. --debug=app,json,cometd
2. Correctly handle opening links in external browser.
3. Refresh status when resuming from suspend.
4. Add support for password protected servers.
5. Set page zoom level when loaded.

0.1.0
-----
1. Increment zoom in 5% steps, min 25% max 500%
2. Update settings instance when change zoom via keyboard.
3. When change zoom via keyboard show message (via skin).
4. "Ctrl+Shift+," (control-shift-comma) opens settings page - consistent with
   other KDE apps.
5. Esc closes settings page - consistent with MaterialSkin.
6. Allow sending commands to an instance by starting a second with play,
   pause, playPause, prev, or next - e.g. "melodeon play"
7. Add option to inhibit suspend whilst playing.

0.0.1
-----
1. Initial release